<resources>
    <string name="app_name">ContactsApp</string>
    <string name="add_contact">Add contact</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="call">Call</string>
    <string name="previous_contact">Previous contact</string>
    <string name="next_contact">Next contact</string>
    <string name="contact_details">Contact details</string>
    <string name="email">Email</string>
    <string name="postal_code">Postal code</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="distance">Distance</string>
</resources>
