<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.cesalberca.contactsapp.DetailContactActivity">

    <TextView
        android:text="@string/contact_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/addContactHeadline"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentStart="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivContact"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_below="@+id/addContactHeadline"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bNext"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:background="@android:color/transparent"
        android:layout_alignParentStart="true"
        android:onClick="previousContact"
        android:id="@+id/bPrevious"
        android:contentDescription="@string/previous_contact" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        android:onClick="nextContact"
        android:id="@+id/bNext"
        android:contentDescription="@string/next_contact"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:contentDescription="@string/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bCallContact"
        android:src="@drawable/ic_phone_black_24dp"
        android:tint="@color/colorAccent"
        android:minWidth="32dp"
        android:minHeight="32dp"
        android:background="@android:color/transparent"
        android:onClick="callContact"
        android:elevation="4dp"
        android:layout_alignTop="@+id/bPrevious"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etName"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:layout_alignTop="@+id/ivContact"
        android:layout_toEndOf="@+id/ivContact" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:id="@+id/etLastname"
        android:hint="@string/lastname"
        android:layout_below="@+id/etName"
        android:layout_toEndOf="@+id/ivContact" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:id="@+id/etPhone"
        android:hint="@string/phone"
        android:layout_below="@+id/etLastname"
        android:layout_toEndOf="@+id/ivContact" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:id="@+id/etAddress"
        android:hint="@string/address"
        android:layout_below="@+id/etPhone"
        android:layout_toEndOf="@+id/ivContact" />

    <TextView
        android:text="@string/email"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        android:layout_below="@+id/tvPostalCode"
        android:layout_alignStart="@+id/tvPostalCode"/>

    <TextView
        android:text="@string/postal_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/tvPostalCode"
        android:layout_below="@+id/etAddress"
        android:layout_alignStart="@+id/etAddress" />

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDistance"
        android:layout_below="@+id/tvEmail"
        android:layout_alignStart="@+id/tvEmail" />
</RelativeLayout>
