<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.cesalberca.contactsapp.CreateContactActivity">

    <TextView
        android:text="@string/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/addContactHeadline"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/ivContact"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        android:onClick="takePicture"
        android:src="@drawable/ic_person_add_black_24dp"
        android:layout_below="@+id/addContactHeadline"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:hint="@string/name"
        android:layout_below="@+id/addContactHeadline"
        android:layout_toEndOf="@+id/ivContact" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etLastname"
        android:hint="@string/lastname"
        android:layout_below="@+id/etName"
        android:layout_toEndOf="@+id/ivContact" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etPhone"
        android:inputType="phone"
        android:hint="@string/phone"
        android:layout_below="@+id/etLastname"
        android:layout_toEndOf="@+id/ivContact" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etAddress"
        android:hint="@string/address"
        android:layout_below="@+id/etPhone"
        android:layout_alignStart="@+id/etPhone" />

    <Button
        android:text="@string/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bCallContact"
        android:onClick="createContact"
        android:elevation="0dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignStart="@+id/etPostalCode"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:layout_below="@+id/etPostalCode"
        android:layout_alignStart="@+id/etPostalCode" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etPostalCode"
        android:hint="@string/postal_code"
        android:layout_below="@+id/etAddress"
        android:layout_alignStart="@+id/etAddress"
        android:inputType="textPostalAddress" />
</RelativeLayout>
